test/compile_errors/stage1/obj/union_with_0_fields.zig
const Foo = union {};

// union with 0 fields
//
// tmp.zig:1:13: error: union declarations must have at least one tag
